Fix cut-off content inside about and search drawers on mobile (#85)

--- a/resources/css/footer.pcss
+++ b/resources/css/footer.pcss
@@ -13,6 +13,14 @@
   }
 }
 
+.footer {
+  /* Override Vuetensils no-scroll behaviour */
+  touch-action: initial !important;
+  user-select: initial !important;
+  -webkit-user-drag: initial !important;
+  -webkit-tap-highlight-color: initial !important;
+}
+
 .footer__inner {
   display: flex;
   flex-direction: column;
