--- a/resources/css/search-bar.pcss
+++ b/resources/css/search-bar.pcss
@@ -20,6 +20,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
+  /* Override Vuetensils no-scroll behaviour */
+  touch-action: initial !important;
+  user-select: initial !important;
+  -webkit-user-drag: initial !important;
+  -webkit-tap-highlight-color: initial !important;
 }
 
 .form__input-wrapper--search-bar {
